@@ -16,8 +16,6 @@ NOW
    old and new LHAPDF, and finally compare the files line-by-line, with
    pulls/ratios to the "old" LHAPDF as the reference.
 
-- Set alpha_s params in PDF interface during lazy instantiation
-
 - Fix and test numerical and analytic alpha_s running
    The ODE solver needs serious optimisation, and numerically the results look
    dubious for both the analytic and ODE versions. Compare to HOPPET/QCD-PEGASUS
