@@ -1,5 +1,7 @@
 2013-01-28  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding setting of available AlphaS params in the PDF interface.
+
 	* Adding search path set/append/prepend functions, using the LHAPDF_DATA_PATH env variable.
 
 	* More methods, and public access to most data members on AlphaS.
